# jwaim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hack.cpp  hack.h  helper.cpp  helper.h  jwaim  jwaim.pro  jwsettings.cpp  jwsettings.h  main.cpp  moc_predefs.h  moc_window.cpp  monitor.cpp  monitor.h  offsets.h  remote.cpp  remote.h  settings.cfg  settings.h  settings_example.cfg  types.h  window.cpp  window.h
src/: CMakeLists.txt  aimbot.hpp  glowhack.cpp  glowhack.hpp  jwaim.cpp  jwaim.hpp  main.cpp  pattern_scanner.cpp  pattern_scanner.hpp  process_utils.hpp  remote_process.cpp  remote_process.hpp  remote_process_interface.cpp  remote_process_interface.hpp
